--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aslıhan İkiel</title>
-    <link rel="icon" href="https://www.lcw.com/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://www.lcw.com/favicon.ico" type="image/x-icon">  
+    <link rel="icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="" type="image/x-icon">  
 </head>
 <body>
     <div class="product-detail">
